<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profilo" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_collections"
            android:title="@string/collection" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chat"
            />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/preferiti"/>
    </group>

    <item android:title="@string/aggiungi">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add"
                android:title="@string/pubblicaItinerario"/>
            <item
                android:id="@+id/nav_registra"
                android:icon="@drawable/ic_baseline_directions_walk_24"
                android:title="@string/registraItinerario"/>
        </menu>
    </item>

</menu>