<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".View.Fragment.SignUpFragment"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/SUtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/toolbarColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/SUtitleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:text="@string/registrati"
            android:textColor="@color/white"
            android:textSize="34sp"/>

        <ImageView
            android:id="@+id/SUbackButtonRegistrati"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="start"/>


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/SUeditTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nome"
        android:textColor="@color/black"
        android:inputType="text"
        android:minHeight="48dp"
        android:imeOptions="actionNext"/>


    <EditText
        android:id="@+id/SUeditTextCognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/cognome"
        android:inputType="text"
        android:minHeight="48dp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/SUeditTextEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/SUeditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/SUtextViewAttenzione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10sp"
        android:text="@string/policyPassword"
        android:textColor="@android:color/holo_red_dark"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SUeditTextPasswordSignupLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SUeditTextPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SUeditTextConfermaPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="5sp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SUeditTextConfermaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/SUcheckBoxTerminiServizi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/terminiServizi"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/SUtextViewTerminiServizi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/accettareTerminiServizi"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/SUregistratiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/toolbarColor"
        android:text="@string/completeSignUp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>