<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".View.Fragment.ProfiloFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewFotoProfiloAcProfilo"
        android:layout_width="238dp"
        android:layout_height="146dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/app_logo"
        app:civ_border_color="@color/black"
        app:civ_border_width="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewUsernameAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/usernameProfileTag"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEditFotoProfilo"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textViewNomeAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:text="@string/nomeProfileTag"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameAcProfilo"
        app:layout_constraintVertical_bias="0.008" />


    <TextView
        android:id="@+id/textViewCognomeAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/cognomeProfileTag"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeAcProfilo"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textViewEmailAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/emailProfileTag"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCognomeAcProfilo" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailAcProfilo" />

    <TextView
        android:id="@+id/textViewUsernameEffettivoAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUsernameAcProfilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUsernameAcProfilo"
        app:layout_constraintTop_toTopOf="@+id/textViewUsernameAcProfilo"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textViewNomeEffettivoAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNomeAcProfilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/textViewNomeAcProfilo"
        app:layout_constraintTop_toTopOf="@+id/textViewNomeAcProfilo"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/textViewCognomeEffettivoAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cognome"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCognomeAcProfilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewCognomeAcProfilo"
        app:layout_constraintTop_toTopOf="@+id/textViewCognomeAcProfilo"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textViewEmailEffettivaAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEmailAcProfilo"
        app:layout_constraintStart_toEndOf="@+id/textViewEmailAcProfilo"
        app:layout_constraintTop_toTopOf="@+id/textViewEmailAcProfilo"
        app:layout_constraintVertical_bias="0.017" />


    <Button
        android:id="@+id/buttonTracciatiPersonaliAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="@color/vividBlue"
        android:text="@string/tracciatiPersonali"
        android:textColor="@color/white"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/textViewCancellaAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/cancellaAccount"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionDelete"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewCancellaAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTracciatiPersonaliAcProfilo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageViewEditFotoProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="193dp"
        android:background="@color/background"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFotoProfiloAcProfilo" />


</androidx.constraintlayout.widget.ConstraintLayout>