<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewDifficultyPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/filterDifficulty"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />


    <TimePicker
        android:id="@+id/durationPickerPopupFiltri"
        android:layout_width="285dp"
        android:layout_height="78dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDurataPopupFiltri"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDifficoltaPopupFiltri" />

    <TextView
        android:id="@+id/textViewDurataPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/filterDurata"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDifficoltaPopupFiltri"
        app:layout_constraintVertical_bias="0.038" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchPopupFiltri"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="@string/filterAccessDisable"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationPickerPopupFiltri"
        app:layout_constraintVertical_bias="0.068" />

    <Spinner
        android:id="@+id/spinnerDifficoltaPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="42dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewDifficultyPopupFiltri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextAreaGeograficaPopupFiltri"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24sp"
        android:hint="@string/filterAreaGeografica"
        android:imeOptions="actionNext"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPopupFiltri"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/buttonAnnullaPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/Annulla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLunghezzaPopupFiltri"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonConfermaPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/toolbarColor"
        android:text="@string/conferma"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLunghezzaPopupFiltri"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPuntoInizioPopupFiltri"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/filterStart"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAreaGeograficaPopupFiltri"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPuntoFinePopupFiltri"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/filterFinish"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPuntoInizioPopupFiltri"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextLunghezzaPopupFiltri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/filterDistanza"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPuntoFinePopupFiltri"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewTitleFilter"
        android:layout_width="61dp"
        android:layout_height="19dp"
        android:text="@string/filters"
        android:textAlignment="viewStart"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewDifficultyPopupFiltri"
        app:layout_constraintEnd_toStartOf="@+id/spinnerDifficoltaPopupFiltri"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewDifficultyPopupFiltri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

</androidx.constraintlayout.widget.ConstraintLayout>